hphp/test/zend/bad/ext-standard/zend_logo_guid.php
<?php
echo zend_logo_guid();
?>